--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -5,11 +5,17 @@
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
+        <item name="fontFamily">@font/ffshamelfamily_sansonebook</item>
+
     </style>
 
     <style name="adding_loginstate" parent="Theme.AppCompat.Light.DarkActionBar">
         <item name="colorControlNormal">#c5c5c5</item>
         <item name="colorControlActivated">@color/black</item>
         <item name="colorControlHighlight">@color/black</item>
+        <item name="fontFamily">@font/ffshamelfamily_sansonebook</item>
+
     </style>
+
+
 </resources>
