--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -13,4 +13,9 @@
     <color name="textColor70">#B3192435</color>
     <color name="selctedOrange">#f2864d</color>
     <color name="white">#FFFFFF</color>
+    <color name="text_black">#4a4a4a</color>
+    <color name="text_grey">#737373</color>
+    <color name="black_bold">#141414</color>
+    <color name="green">#69c193</color>
+
 </resources>
