--- a/app/src/main/res/layout/fragment_accountant.xml
+++ b/app/src/main/res/layout/fragment_accountant.xml
@@ -3,6 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:paddingBottom="@dimen/_70sdp"
     tools:context=".admin.delegatesAccountants.fragments.AccountantsFragment">
 
     <androidx.core.widget.NestedScrollView
@@ -15,77 +16,46 @@
             android:layout_height="match_parent"
             android:orientation="vertical">
 
-            <TextView
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="46dp"
+                android:layout_marginTop="@dimen/_14sdp"
+                android:background="@color/grey_bg"
+                android:gravity="center"
+                android:orientation="horizontal">
+
+
+                <TextView
+                    android:id="@+id/accountantCount"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:fontFamily="@font/ffshamelfamily_sansonebold"
+                    android:text=""
+                    android:textColor="@color/black_bold"
+                    android:textSize="15sp"
+                    android:textStyle="bold" />
+
+                <TextView
+                    android:id="@+id/accountantText"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="@dimen/_4sdp"
+                    android:fontFamily="@font/cairo_regular"
+                    android:text="@string/accounatnt"
+                    android:textColor="@color/text_black"
+                    android:textSize="12sp" />
+            </LinearLayout>
+
+
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/accountantRecycler"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_margin="@dimen/_24sdp"
-                android:text="@string/accountant_delegates"
-                />
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_margin="@dimen/_24sdp"
-                android:text="@string/accountant_delegates"
-                />  <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_margin="@dimen/_24sdp"
-            android:text="@string/accountant_delegates"
-            />  <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_margin="@dimen/_24sdp"
-            android:text="@string/accountant_delegates"
-            />  <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_margin="@dimen/_24sdp"
-            android:text="@string/accountant_delegates"
-            />  <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_margin="@dimen/_24sdp"
-            android:text="@string/accountant_delegates"
-            />  <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_margin="@dimen/_24sdp"
-            android:text="@string/accountant_delegates"
-            />  <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_margin="@dimen/_24sdp"
-            android:text="@string/accountant_delegates"
-            />  <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_margin="@dimen/_24sdp"
-            android:text="@string/accountant_delegates"
-            />  <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_margin="@dimen/_24sdp"
-            android:text="@string/accountant_delegates"
-            />  <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_margin="@dimen/_24sdp"
-            android:text="@string/accountant_delegates"
-            />  <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_margin="@dimen/_24sdp"
-            android:text="@string/accountant_delegates"
-            />  <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_margin="@dimen/_24sdp"
-            android:text="@string/accountant_delegates"
-            />
+                android:layout_marginTop="@dimen/_14sdp" />
 
 
         </LinearLayout>
-
     </androidx.core.widget.NestedScrollView>
 
 
