delegateOrder ,  delegateWallet design

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -18,6 +18,8 @@
     <color name="black_bold">#141414</color>
     <color name="green">#69c193</color>
     <color name="grey_bg">#f3f1f1</color>
+    <color name="orange_light">#d2a244</color>
+    <color name="text_green">#48b07a</color>
 
 
 
