--- a/app/src/main/res/layout/fragment_delegate_wallet.xml
+++ b/app/src/main/res/layout/fragment_delegate_wallet.xml
@@ -1,14 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".admin.delegatesAccountants.fragments.DelegateWalletFragment">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/delegateWalletRecycler"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="delegate Wallet" />
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_marginTop="@dimen/_14sdp"
+        />
 
-</FrameLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
