finish accountants & delegates

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -20,6 +20,9 @@
     <color name="grey_bg">#f3f1f1</color>
     <color name="orange_light">#d2a244</color>
     <color name="text_green">#48b07a</color>
+    <color name="green_background">#1569c193</color>
+
+
 
 
 
