--- a/app/src/main/res/layout/fragment_admin_accountant.xml
+++ b/app/src/main/res/layout/fragment_admin_accountant.xml
@@ -109,7 +109,7 @@
                 android:layout_height="match_parent"
                 android:orientation="vertical">
 
-                <com.duolingo.open.rtlviewpager.RtlViewPager
+                <androidx.viewpager2.widget.ViewPager2
                     android:id="@+id/viewPagerDelegatesAccountant"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent" />
@@ -135,7 +135,7 @@
         android:gravity="center"
         android:textColor="@color/white"
         android:textSize="16sp"
-        android:text="@string/add_product"
+        android:text="@string/add_accountant"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
