--- a/app/src/main/res/layout/fragment_delegate_details.xml
+++ b/app/src/main/res/layout/fragment_delegate_details.xml
@@ -108,7 +108,7 @@
                 android:layout_height="match_parent"
                 android:orientation="vertical">
 
-                <com.duolingo.open.rtlviewpager.RtlViewPager
+                <androidx.viewpager2.widget.ViewPager2
                     android:id="@+id/viewPagerDelegatesDetails"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent" />
