--- a/app/src/main/res/layout/fragment_delegates.xml
+++ b/app/src/main/res/layout/fragment_delegates.xml
@@ -33,7 +33,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:fontFamily="@font/ffshamelfamily_sansonebold"
-                    android:text="800"
+                    android:text=""
                     android:textColor="@color/black_bold"
                     android:textSize="15sp"
                     android:textStyle="bold" />
