finish AddStore Design

--- a/app/src/main/res/layout/fragment_add_store.xml
+++ b/app/src/main/res/layout/fragment_add_store.xml
@@ -267,6 +267,7 @@
                     />
 
                 <EditText
+                    android:focusable="false"
                     android:id="@+id/responsiblePersonEditText"
                     android:textAlignment="viewStart"
                     app:backgroundTint="@color/text_grey"
