--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -21,6 +21,8 @@
     <color name="orange_light">#d2a244</color>
     <color name="text_green">#48b07a</color>
     <color name="green_background">#1569c193</color>
+    <color name="search_text">#9b9b9b</color>
+    <color name="card_background">#3acdd3e0</color>
 
 
 
