--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -53,6 +53,7 @@
     </androidx.constraintlayout.widget.ConstraintLayout>
 
     <androidx.core.widget.NestedScrollView
+        android:id="@+id/scrollView"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         app:layout_constraintTop_toBottomOf="@+id/topContainer"
@@ -62,8 +63,6 @@
         >
 
        <LinearLayout
-           android:layout_marginStart="@dimen/_14sdp"
-           android:layout_marginEnd="@dimen/_14sdp"
            android:layout_marginTop="@dimen/_16sdp"
            android:orientation="vertical"
            android:layout_width="match_parent"
@@ -71,6 +70,9 @@
 
 
            <com.google.android.material.card.MaterialCardView
+               android:id="@+id/editProfileCard"
+               android:layout_marginStart="@dimen/_14sdp"
+               android:layout_marginEnd="@dimen/_14sdp"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_50sdp"
                android:background="@color/white"
@@ -82,25 +84,28 @@
                    android:layout_height="match_parent">
 
                    <TextView
-                       android:layout_width="wrap_content"
+                       android:textAlignment="viewStart"
+                       android:layout_width="0dp"
                        android:layout_height="wrap_content"
-                       app:layout_constraintStart_toStartOf="parent"
-                       app:layout_constraintTop_toTopOf="parent"
-                       app:layout_constraintBottom_toBottomOf="parent"
+                       android:layout_marginStart="@dimen/_20sdp"
                        android:text="@string/edit_profile"
-                       android:textSize="@dimen/_15sdp"
                        android:textColor="@color/text_black"
-                       />
+                       android:textSize="@dimen/_15sdp"
+                       app:layout_constraintBottom_toBottomOf="parent"
+                       app:layout_constraintEnd_toStartOf="@+id/imageView"
+                       app:layout_constraintStart_toStartOf="parent"
+                       app:layout_constraintTop_toTopOf="parent" />
 
                    <ImageView
+                       android:id="@+id/imageView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
+                       android:layout_marginEnd="@dimen/_16sdp"
+                       android:tint="@color/text_black"
+                       app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
-                       app:layout_constraintBottom_toBottomOf="parent"
-                       app:srcCompat="@drawable/ic_arrow"
-                       android:tint="@color/text_black"
-                       />
+                       app:srcCompat="@drawable/ic_arrow" />
 
 
 
@@ -112,17 +117,331 @@
 
            </com.google.android.material.card.MaterialCardView>
 
+           <com.google.android.material.card.MaterialCardView
+               android:id="@+id/adminCard"
+               android:layout_marginTop="@dimen/_10sdp"
+               android:layout_marginStart="@dimen/_14sdp"
+               android:layout_marginEnd="@dimen/_14sdp"
+               android:layout_width="match_parent"
+               android:layout_height="@dimen/_50sdp"
+               android:background="@color/white"
+               app:cardCornerRadius="10dp"
+               app:cardElevation="5dp">
+
+               <androidx.constraintlayout.widget.ConstraintLayout
+                   android:layout_width="match_parent"
+                   android:layout_height="match_parent">
+
+                   <TextView
+                       android:textAlignment="viewStart"
+                       android:layout_width="0dp"
+                       android:layout_height="wrap_content"
+                       android:layout_marginStart="@dimen/_20sdp"
+                       android:text="@string/admin"
+                       android:textColor="@color/text_black"
+                       android:textSize="@dimen/_15sdp"
+                       app:layout_constraintBottom_toBottomOf="parent"
+                       app:layout_constraintEnd_toStartOf="@+id/image"
+                       app:layout_constraintStart_toStartOf="parent"
+                       app:layout_constraintTop_toTopOf="parent" />
+
+                   <ImageView
+                       android:id="@+id/image"
+                       android:layout_width="wrap_content"
+                       android:layout_height="wrap_content"
+                       android:layout_marginEnd="@dimen/_16sdp"
+                       android:tint="@color/text_black"
+                       app:layout_constraintBottom_toBottomOf="parent"
+                       app:layout_constraintEnd_toEndOf="parent"
+                       app:layout_constraintTop_toTopOf="parent"
+                       app:srcCompat="@drawable/ic_arrow" />
+
+
+
+
+               </androidx.constraintlayout.widget.ConstraintLayout>
+
+
+
+
+           </com.google.android.material.card.MaterialCardView>
+
+           <com.google.android.material.card.MaterialCardView
+               android:id="@+id/msrofatCard"
+               android:layout_marginTop="@dimen/_10sdp"
+               android:layout_marginStart="@dimen/_14sdp"
+               android:layout_marginEnd="@dimen/_14sdp"
+               android:layout_width="match_parent"
+               android:layout_height="@dimen/_50sdp"
+               android:background="@color/white"
+               app:cardCornerRadius="10dp"
+               app:cardElevation="5dp">
+
+               <androidx.constraintlayout.widget.ConstraintLayout
+                   android:layout_width="match_parent"
+                   android:layout_height="match_parent">
+
+                   <TextView
+                       android:textAlignment="viewStart"
+                       android:layout_width="0dp"
+                       android:layout_height="wrap_content"
+                       android:layout_marginStart="@dimen/_20sdp"
+                       android:text="@string/msrofat"
+                       android:textColor="@color/text_black"
+                       android:textSize="@dimen/_15sdp"
+                       app:layout_constraintBottom_toBottomOf="parent"
+                       app:layout_constraintEnd_toStartOf="@+id/arrow"
+                       app:layout_constraintStart_toStartOf="parent"
+                       app:layout_constraintTop_toTopOf="parent" />
+
+                   <ImageView
+                       android:id="@+id/arrow"
+                       android:layout_width="wrap_content"
+                       android:layout_height="wrap_content"
+                       android:layout_marginEnd="@dimen/_16sdp"
+                       android:tint="@color/text_black"
+                       app:layout_constraintBottom_toBottomOf="parent"
+                       app:layout_constraintEnd_toEndOf="parent"
+                       app:layout_constraintTop_toTopOf="parent"
+                       app:srcCompat="@drawable/ic_arrow" />
+
+
+
+
+               </androidx.constraintlayout.widget.ConstraintLayout>
+
+
+
+
+           </com.google.android.material.card.MaterialCardView>
+           <com.google.android.material.card.MaterialCardView
+               android:id="@+id/paymentsCard"
+               android:layout_marginTop="@dimen/_10sdp"
+               android:layout_marginStart="@dimen/_14sdp"
+               android:layout_marginEnd="@dimen/_14sdp"
+               android:layout_width="match_parent"
+               android:layout_height="@dimen/_50sdp"
+               android:background="@color/white"
+               app:cardCornerRadius="10dp"
+               app:cardElevation="5dp">
+
+               <androidx.constraintlayout.widget.ConstraintLayout
+                   android:layout_width="match_parent"
+                   android:layout_height="match_parent">
+
+                   <TextView
+                       android:textAlignment="viewStart"
+                       android:layout_width="0dp"
+                       android:layout_height="wrap_content"
+                       android:layout_marginStart="@dimen/_20sdp"
+                       android:text="@string/payments"
+                       android:textColor="@color/text_black"
+                       android:textSize="@dimen/_15sdp"
+                       app:layout_constraintBottom_toBottomOf="parent"
+                       app:layout_constraintEnd_toStartOf="@+id/arrowPayment"
+                       app:layout_constraintStart_toStartOf="parent"
+                       app:layout_constraintTop_toTopOf="parent" />
+
+                   <ImageView
+                       android:id="@+id/arrowPayment"
+                       android:layout_width="wrap_content"
+                       android:layout_height="wrap_content"
+                       android:layout_marginEnd="@dimen/_16sdp"
+                       android:tint="@color/text_black"
+                       app:layout_constraintBottom_toBottomOf="parent"
+                       app:layout_constraintEnd_toEndOf="parent"
+                       app:layout_constraintTop_toTopOf="parent"
+                       app:srcCompat="@drawable/ic_arrow" />
+
+
+
+
+               </androidx.constraintlayout.widget.ConstraintLayout>
+
+
+
+
+           </com.google.android.material.card.MaterialCardView>
+
+           <com.google.android.material.card.MaterialCardView
+               android:id="@+id/editPasswordCard"
+               android:layout_marginTop="@dimen/_10sdp"
+               android:layout_marginStart="@dimen/_14sdp"
+               android:layout_marginEnd="@dimen/_14sdp"
+               android:layout_width="match_parent"
+               android:layout_height="@dimen/_50sdp"
+               android:background="@color/white"
+               app:cardCornerRadius="10dp"
+               app:cardElevation="5dp">
+
+               <androidx.constraintlayout.widget.ConstraintLayout
+                   android:layout_width="match_parent"
+                   android:layout_height="match_parent">
+
+                   <TextView
+                       android:textAlignment="viewStart"
+                       android:layout_width="0dp"
+                       android:layout_height="wrap_content"
+                       android:layout_marginStart="@dimen/_20sdp"
+                       android:text="@string/editPassword"
+                       android:textColor="@color/text_black"
+                       android:textSize="@dimen/_15sdp"
+                       app:layout_constraintBottom_toBottomOf="parent"
+                       app:layout_constraintEnd_toStartOf="@+id/arrowPass"
+                       app:layout_constraintStart_toStartOf="parent"
+                       app:layout_constraintTop_toTopOf="parent" />
+
+                   <ImageView
+                       android:id="@+id/arrowPass"
+                       android:layout_width="wrap_content"
+                       android:layout_height="wrap_content"
+                       android:layout_marginEnd="@dimen/_16sdp"
+                       android:tint="@color/text_black"
+                       app:layout_constraintBottom_toBottomOf="parent"
+                       app:layout_constraintEnd_toEndOf="parent"
+                       app:layout_constraintTop_toTopOf="parent"
+                       app:srcCompat="@drawable/ic_arrow" />
+
+
+
+
+               </androidx.constraintlayout.widget.ConstraintLayout>
+
+
+
+
+           </com.google.android.material.card.MaterialCardView>
+
+           <com.google.android.material.card.MaterialCardView
+               android:id="@+id/notificationCard"
+               android:layout_marginTop="@dimen/_10sdp"
+               android:layout_marginStart="@dimen/_14sdp"
+               android:layout_marginEnd="@dimen/_14sdp"
+               android:layout_width="match_parent"
+               android:layout_height="@dimen/_50sdp"
+               android:background="@color/white"
+               app:cardCornerRadius="10dp"
+               app:cardElevation="5dp">
+
+               <androidx.constraintlayout.widget.ConstraintLayout
+                   android:layout_width="match_parent"
+                   android:layout_height="match_parent">
+
+                   <TextView
+                       android:textAlignment="viewStart"
+                       android:layout_width="0dp"
+                       android:layout_height="wrap_content"
+                       android:layout_marginStart="@dimen/_20sdp"
+                       android:text="@string/getNotification"
+                       android:textColor="@color/text_black"
+                       android:textSize="@dimen/_15sdp"
+                       app:layout_constraintBottom_toBottomOf="parent"
+                       app:layout_constraintEnd_toStartOf="@+id/switchNotification"
+                       app:layout_constraintStart_toStartOf="parent"
+                       app:layout_constraintTop_toTopOf="parent" />
+
+                   <androidx.appcompat.widget.SwitchCompat
+                       android:id="@+id/switchNotification"
+                       android:layout_width="wrap_content"
+                       android:layout_height="wrap_content"
+                       android:layout_marginEnd="@dimen/_16sdp"
+                       android:checked="true"
+                       android:thumb="@drawable/thumb_selector"
+                       app:track="@drawable/track_selector"
+                       app:layout_constraintBottom_toBottomOf="parent"
+                       app:layout_constraintEnd_toEndOf="parent"
+                       app:layout_constraintTop_toTopOf="parent"
+                        />
+
+
+
+
+               </androidx.constraintlayout.widget.ConstraintLayout>
+
+
+
+
+           </com.google.android.material.card.MaterialCardView>
+
+           <com.google.android.material.card.MaterialCardView
+               android:id="@+id/logOutCard"
+               android:layout_marginTop="@dimen/_10sdp"
+               android:layout_marginStart="@dimen/_14sdp"
+               android:layout_marginEnd="@dimen/_14sdp"
+               android:layout_width="match_parent"
+               android:layout_height="@dimen/_50sdp"
+               android:background="@color/white"
+               app:cardCornerRadius="10dp"
+               android:layout_marginBottom="@dimen/_16sdp"
+               app:cardElevation="5dp">
+
+               <androidx.constraintlayout.widget.ConstraintLayout
+                   android:layout_width="match_parent"
+                   android:layout_height="match_parent">
+
+                   <TextView
+                       android:textAlignment="viewStart"
+                       android:layout_width="0dp"
+                       android:layout_height="wrap_content"
+                       android:layout_marginStart="@dimen/_20sdp"
+                       android:text="@string/logOut"
+                       android:textColor="@color/logout_red"
+                       android:textSize="@dimen/_15sdp"
+                       app:layout_constraintEnd_toEndOf="parent"
+                       app:layout_constraintBottom_toBottomOf="parent"
+                       app:layout_constraintStart_toStartOf="parent"
+                       app:layout_constraintTop_toTopOf="parent" />
 
 
 
 
 
+               </androidx.constraintlayout.widget.ConstraintLayout>
+
+
+
+
+           </com.google.android.material.card.MaterialCardView>
+
+           <LinearLayout
+               android:layout_marginBottom="@dimen/_100sdp"
+               android:layout_marginTop="@dimen/_40sdp"
+               android:gravity="center"
+               android:layout_gravity="center"
+               android:id="@+id/appDataLayout"
+               android:layout_width="wrap_content"
+               android:layout_height="wrap_content"
+               android:orientation="vertical"
+               >
+
+               <TextView
+                   android:textSize="@dimen/_12sdp"
+                   android:textColor="@color/text_black"
+                   android:textAlignment="center"
+                   android:text="@string/appInfo"
+                   android:layout_width="wrap_content"
+                   android:layout_height="wrap_content"
+                   />
+
+               <TextView
+                   android:id="@+id/versionNumber"
+                   android:textAlignment="center"
+                   android:text="@string/versionNumb"
+                   android:layout_width="wrap_content"
+                   android:layout_height="wrap_content"
+                   android:textSize="@dimen/_12sdp"
+                   android:textStyle="bold"
+                   android:textColor="@color/grey_version"
+                   android:fontFamily="@font/ffshamelfamily_sansonebold"
+                   />
+
+
+
+           </LinearLayout>
 
 
 
        </LinearLayout>
-
-
 
     </androidx.core.widget.NestedScrollView>
 
