--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -24,6 +24,9 @@
     <color name="search_text">#9b9b9b</color>
     <color name="card_background">#3acdd3e0</color>
     <color name="pink_color">#ea5f72</color>
+    <color name="switch_green">#00ad2a</color>
+    <color name="logout_red">#d0021b</color>
+    <color name="grey_version">#5a5a5a</color>
 
 
 
