--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -7,12 +7,12 @@
     tools:context=".common.login.LoginFragment">
 
     <ImageView
-        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         android:id="@+id/backButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="@dimen/_18sdp"
+        android:layout_marginStart="@dimen/_18sdp"
         android:background="@android:color/transparent"
         android:layout_marginTop="@dimen/_10sdp"
         app:srcCompat="@drawable/ic_back_button"
