--- a/app/src/main/res/layout/fragment_add_admin.xml
+++ b/app/src/main/res/layout/fragment_add_admin.xml
@@ -1,11 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".admin.settings.editprofile.EditProfileFragment">
+    tools:context=".admin.settings.admin.AddAdminFragment">
 
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -36,7 +35,7 @@
             android:id="@+id/textView3"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="@string/edit_profile"
+            android:text="@string/add_admin"
             android:layout_marginStart="@dimen/_24sdp"
             android:layout_marginEnd="@dimen/_5sdp"
             android:textColor="@color/textColor"
@@ -56,6 +55,7 @@
         android:id="@+id/scrollView"
         android:layout_width="match_parent"
         android:layout_height="0dp"
+        android:fillViewport="true"
         app:layout_constraintTop_toBottomOf="@+id/topContainer"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -68,42 +68,19 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <de.hdodenhof.circleimageview.CircleImageView
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/adminNameContainer"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            android:id="@+id/profileImg"
-            android:layout_width="@dimen/_80sdp"
-            android:layout_height="@dimen/_80sdp"
-            android:layout_gravity="center"
-            android:src="@color/gray"
-            />
-
-        <ImageView
-            android:id="@+id/picImage"
-            app:layout_constraintBottom_toBottomOf="@+id/profileImg"
-            app:layout_constraintStart_toStartOf="@+id/profileImg"
-            app:layout_constraintEnd_toEndOf="@+id/profileImg"
-            app:layout_constraintTop_toTopOf="@+id/profileImg"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            app:srcCompat="@drawable/ic_photo"
-            />
-
-
-        <androidx.constraintlayout.widget.ConstraintLayout
-            android:id="@+id/nameContainer"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/profileImg"
-            android:layout_marginTop="@dimen/_35sdp"
+            android:layout_marginTop="@dimen/_14sdp"
             android:layout_marginStart="@dimen/_24sdp"
             android:layout_marginEnd="@dimen/_24sdp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
             <TextView
-                android:id="@+id/profileNameText"
+                android:id="@+id/adminNameText"
                 android:textAlignment="viewStart"
                 android:textSize="14sp"
                 android:textColor="@color/black_bold"
@@ -112,61 +89,18 @@
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                android:text="@string/name"
+                android:text="@string/adminName"
                 />
 
             <EditText
-                android:id="@+id/profileNameEdt"
+                android:id="@+id/adminNameEdt"
                 app:backgroundTint="@color/text_grey"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                app:layout_constraintTop_toBottomOf="@+id/profileNameText"
+                app:layout_constraintTop_toBottomOf="@+id/adminNameText"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                android:hint="@string/name"
-                android:textAlignment="viewStart"
-                android:textSize="16sp"
-                android:textColor="@color/text_grey"
-                />
-
-
-
-        </androidx.constraintlayout.widget.ConstraintLayout>
-
-
-        <androidx.constraintlayout.widget.ConstraintLayout
-            android:id="@+id/mobileNumberContainer"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/nameContainer"
-            android:layout_marginTop="@dimen/_24sdp"
-            android:layout_marginStart="@dimen/_24sdp"
-            android:layout_marginEnd="@dimen/_24sdp"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-
-            <TextView
-                android:id="@+id/mobileNameText"
-                android:textAlignment="viewStart"
-                android:textSize="14sp"
-                android:textColor="@color/black_bold"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                android:text="@string/mobileNumber"
-                />
-
-            <EditText
-                android:id="@+id/mobileNameEdt"
-                app:backgroundTint="@color/text_grey"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                app:layout_constraintTop_toBottomOf="@+id/mobileNameText"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                android:hint="@string/mobileNumber"
+                android:hint="@string/adminName"
                 android:textAlignment="viewStart"
                 android:textSize="16sp"
                 android:textColor="@color/text_grey"
@@ -177,18 +111,18 @@
         </androidx.constraintlayout.widget.ConstraintLayout>
 
         <androidx.constraintlayout.widget.ConstraintLayout
-            android:id="@+id/addressContainer"
+            android:id="@+id/adminMobileContainer"
+            app:layout_constraintTop_toBottomOf="@+id/adminNameContainer"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/mobileNumberContainer"
-            android:layout_marginTop="@dimen/_24sdp"
+            android:layout_marginTop="@dimen/_16sdp"
             android:layout_marginStart="@dimen/_24sdp"
             android:layout_marginEnd="@dimen/_24sdp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
             <TextView
-                android:id="@+id/addressText"
+                android:id="@+id/adminMobileText"
                 android:textAlignment="viewStart"
                 android:textSize="14sp"
                 android:textColor="@color/black_bold"
@@ -197,18 +131,18 @@
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                android:text="@string/address"
+                android:text="@string/phone_number"
                 />
 
             <EditText
-                android:id="@+id/addressEdt"
+                android:id="@+id/adminMobileEdt"
                 app:backgroundTint="@color/text_grey"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                app:layout_constraintTop_toBottomOf="@+id/addressText"
+                app:layout_constraintTop_toBottomOf="@+id/adminMobileText"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                android:hint="@string/address"
+                android:hint="@string/phone_number"
                 android:textAlignment="viewStart"
                 android:textSize="16sp"
                 android:textColor="@color/text_grey"
@@ -218,33 +152,85 @@
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/countryContainer"
+            app:layout_constraintTop_toBottomOf="@+id/adminMobileContainer"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginTop="@dimen/_16sdp"
+            android:layout_marginStart="@dimen/_24sdp"
+            android:layout_marginEnd="@dimen/_24sdp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <TextView
+                android:id="@+id/countryNameText"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                android:text="@string/country_name"
+                android:textSize="14sp"
+                android:textColor="@color/black_bold"
+                />
+
+            <ImageView
+                android:padding="@dimen/_4sdp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toTopOf="@+id/countryNameText"
+                app:layout_constraintBottom_toBottomOf="@+id/countryNameText"
+                app:srcCompat="@drawable/ic_drop_down"
+
+                />
+
+            <EditText
+                android:id="@+id/countryNameEdt"
+                android:textAlignment="viewStart"
+                app:backgroundTint="@color/text_grey"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="@string/country_name"
+                style="@style/Widget.AppCompat.DropDownItem.Spinner"
+                app:layout_constraintTop_toBottomOf="@+id/countryNameText"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"
+                />
+
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
 
 
         <com.google.android.material.button.MaterialButton
-            android:id="@+id/saveEditProfile"
+            android:id="@+id/confirmAddAdmin"
             android:layout_width="match_parent"
             android:layout_height="@dimen/_50sdp"
-            app:backgroundTint="@color/orange_color"
-            android:layout_marginTop="@dimen/_40sdp"
             android:layout_marginStart="@dimen/_16sdp"
             android:layout_marginEnd="@dimen/_16sdp"
-            android:layout_marginBottom="@dimen/_40sdp"
-            app:cornerRadius="5dp"
-            android:textAlignment="center"
+            android:layout_marginBottom="@dimen/_35sdp"
+            android:layout_marginTop="@dimen/_100sdp"
+            android:fontFamily="@font/ffshamelfamily_sansonebold"
             android:gravity="center"
+            android:text="@string/confirmation"
+            android:textAlignment="center"
             android:textColor="@color/white"
             android:textSize="16sp"
-            android:text="@string/save"
             android:textStyle="bold"
-            android:fontFamily="@font/ffshamelfamily_sansonebold"
-            app:layout_constraintTop_toBottomOf="@+id/addressContainer"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
+            app:backgroundTint="@color/orange_color"
+            app:cornerRadius="5dp"
+            app:layout_constraintTop_toBottomOf="@+id/countryContainer"
             app:layout_constraintBottom_toBottomOf="parent"
-            />
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="1.0"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintVertical_bias="1.0" />
+
+
 
     </androidx.constraintlayout.widget.ConstraintLayout>
-
     </androidx.core.widget.NestedScrollView>
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
