--- a/app/src/main/res/layout/fragment_add_payment.xml
+++ b/app/src/main/res/layout/fragment_add_payment.xml
@@ -1,53 +1,61 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".admin.delegatesAccountants.fragments.AddAccountantFragment">
-
+    tools:context=".admin.settings.payments.AddPaymentFragment">
 
     <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/titleContainer"
+        android:id="@+id/topContainer"
         android:layout_width="match_parent"
         android:layout_height="130dp"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
         android:background="@color/colorOrange55"
         >
+
+
         <ImageView
-            android:id="@+id/backImgAddAccountant"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="@dimen/_24sdp"
+            android:id="@+id/backImageAddPayment"
+            android:layout_marginStart="@dimen/_16sdp"
             android:layout_marginTop="@dimen/_16sdp"
-            app:layout_constraintStart_toStartOf="parent"
+            android:layout_width="wrap_content"
+            android:padding="@dimen/_5sdp"
+            android:layout_height="wrap_content"
+            app:srcCompat="@drawable/ic_ab_back_light"
             app:layout_constraintTop_toTopOf="parent"
-            app:srcCompat="@drawable/ic_ab_back_light" />
-
-        <TextView
-            android:text="@string/add_accountant"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textStyle="bold"
-            android:textSize="25sp"
-            android:textColor="@color/textColor"
-            android:fontFamily="@font/ffshamelfamily_sansonebold"
-            android:layout_marginStart="@dimen/_24sdp"
-            android:layout_marginTop="@dimen/_16sdp"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/backImgAddAccountant"
-
             />
 
-
+        <TextView
+            android:textAlignment="viewStart"
+            android:id="@+id/textView3"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/payments"
+            android:layout_marginStart="@dimen/_24sdp"
+            android:layout_marginEnd="@dimen/_5sdp"
+            android:textColor="@color/textColor"
+            android:textSize="15sp"
+            android:textStyle="bold"
+            android:fontFamily="@font/ffshamelfamily_sansonebold"
+            android:layout_marginTop="@dimen/_16sdp"
+            android:layout_marginBottom="@dimen/_16sdp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/backImageAddPayment"
+            />
     </androidx.constraintlayout.widget.ConstraintLayout>
+
 
 
     <androidx.core.widget.NestedScrollView
         android:fillViewport="true"
-        app:layout_constraintTop_toBottomOf="@+id/titleContainer"
+        app:layout_constraintTop_toBottomOf="@+id/topContainer"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -62,7 +70,7 @@
             >
 
             <androidx.constraintlayout.widget.ConstraintLayout
-                android:id="@+id/accountantNameContainer"
+                android:id="@+id/paymentNameContainer"
                 android:layout_marginStart="@dimen/_24sdp"
                 android:layout_marginEnd="@dimen/_24sdp"
                 android:layout_marginTop="@dimen/_14sdp"
@@ -74,23 +82,28 @@
                 >
 
                 <TextView
-                    android:id="@+id/accountantNameText"
-                    android:layout_width="wrap_content"
+                    android:id="@+id/paymentNameText"
+                    android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    android:textAlignment="viewStart"
                     app:layout_constraintStart_toStartOf="parent"
-                    android:text="@string/accountant_name"
+                    android:text="@string/name"
                     android:textSize="14sp"
                     android:textColor="@color/black_bold"
                     />
 
                 <EditText
+                    android:id="@+id/paymentNameEdt"
                     android:textAlignment="viewStart"
                     app:backgroundTint="@color/text_grey"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:hint="@string/delegate_name"
-                    app:layout_constraintTop_toBottomOf="@+id/accountantNameText"
+                    android:hint="@string/name"
+                    android:textSize="16sp"
+                    android:textColorHint="@color/text_grey"
+                    app:layout_constraintTop_toBottomOf="@+id/paymentNameText"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintBottom_toBottomOf="parent"
@@ -100,35 +113,40 @@
             </androidx.constraintlayout.widget.ConstraintLayout>
 
             <androidx.constraintlayout.widget.ConstraintLayout
-                android:id="@+id/accountantPhoneContainer"
+                android:id="@+id/paymentPriceContainer"
                 android:layout_marginStart="@dimen/_24sdp"
                 android:layout_marginEnd="@dimen/_24sdp"
                 android:layout_marginTop="@dimen/_20sdp"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                app:layout_constraintTop_toBottomOf="@+id/accountantNameContainer"
+                app:layout_constraintTop_toBottomOf="@+id/paymentNameContainer"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 >
 
                 <TextView
-                    android:id="@+id/phoneText"
-                    android:layout_width="wrap_content"
+                    android:id="@+id/paymentPhoneText"
+                    android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     app:layout_constraintTop_toTopOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
-                    android:text="@string/phone_number"
+                    android:text="@string/price"
                     android:textSize="14sp"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    android:textAlignment="viewStart"
                     android:textColor="@color/black_bold"
                     />
 
                 <EditText
+                    android:id="@+id/paymentPhoneEdt"
                     android:textAlignment="viewStart"
                     app:backgroundTint="@color/text_grey"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:hint="@string/phone_number"
-                    app:layout_constraintTop_toBottomOf="@+id/phoneText"
+                    android:textSize="16sp"
+                    android:textColorHint="@color/text_grey"
+                    app:layout_constraintTop_toBottomOf="@+id/paymentPhoneText"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintBottom_toBottomOf="parent"
@@ -137,93 +155,53 @@
 
             </androidx.constraintlayout.widget.ConstraintLayout>
 
-            <androidx.constraintlayout.widget.ConstraintLayout
-                android:id="@+id/countryNameContainer"
-                android:layout_marginStart="@dimen/_24sdp"
-                android:layout_marginEnd="@dimen/_24sdp"
-                android:layout_marginTop="@dimen/_20sdp"
+            <com.google.android.material.card.MaterialCardView
+                android:id="@+id/addDescriptionCard"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                app:layout_constraintTop_toBottomOf="@+id/accountantPhoneContainer"
+                android:minHeight="@dimen/_110sdp"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                >
-
-                <TextView
-                    android:id="@+id/countryNameText"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    app:layout_constraintTop_toTopOf="parent"
-                    app:layout_constraintStart_toStartOf="parent"
-                    android:text="@string/country_name"
-                    android:textSize="14sp"
-                    android:textColor="@color/black_bold"
-                    />
-
-                <ImageView
-                    android:padding="@dimen/_4sdp"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintTop_toTopOf="@+id/countryNameText"
-                    app:layout_constraintBottom_toBottomOf="@+id/countryNameText"
-                    app:srcCompat="@drawable/ic_drop_down"
-
-                    />
-
-                <EditText
-                    android:textAlignment="viewStart"
-                    app:backgroundTint="@color/text_grey"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:hint="@string/country_name"
-                    style="@style/Widget.AppCompat.DropDownItem.Spinner"
-                    app:layout_constraintTop_toBottomOf="@+id/countryNameText"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintBottom_toBottomOf="parent"
-                    />
-
-
-            </androidx.constraintlayout.widget.ConstraintLayout>
-
-            <androidx.constraintlayout.widget.ConstraintLayout
-                android:id="@+id/passwordContainer"
-                android:layout_marginStart="@dimen/_24sdp"
                 android:layout_marginEnd="@dimen/_24sdp"
-                android:layout_marginTop="@dimen/_20sdp"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                app:layout_constraintTop_toBottomOf="@+id/countryNameContainer"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
+                android:layout_marginStart="@dimen/_24sdp"
+                android:layout_marginTop="@dimen/_24sdp"
+                app:cardBackgroundColor="@color/card_color"
+                app:cardCornerRadius="10dp"
+                app:layout_constraintTop_toBottomOf="@+id/paymentPriceContainer"
                 >
 
-                <TextView
-                    android:id="@+id/passwordText"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    app:layout_constraintTop_toTopOf="parent"
-                    app:layout_constraintStart_toStartOf="parent"
-                    android:text="@string/passwordText"
-                    android:textSize="14sp"
-                    android:textColor="@color/black_bold"
-                    />
-
-                <EditText
-                    android:textAlignment="viewStart"
-                    app:backgroundTint="@color/text_grey"
+                <androidx.constraintlayout.widget.ConstraintLayout
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:hint="@string/passwordText"
-                    app:layout_constraintTop_toBottomOf="@+id/passwordText"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintBottom_toBottomOf="parent"
-                    />
+                    android:layout_height="match_parent">
+
+                    <EditText
+                        android:background="@null"
+                        android:textAlignment="viewStart"
+                        android:textSize="16sp"
+                        android:textColorHint="@color/hintColorCard"
+                        android:hint="@string/addDescrption"
+                        app:layout_constraintTop_toTopOf="parent"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        android:layout_marginTop="@dimen/_20sdp"
+                        android:layout_marginStart="@dimen/_14sdp"
+                        android:layout_marginEnd="@dimen/_14sdp"
+                        app:layout_constraintBottom_toBottomOf="parent"
+                        android:layout_marginBottom="@dimen/_20sdp"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
 
 
-            </androidx.constraintlayout.widget.ConstraintLayout>
+                        />
+
+
+
+                </androidx.constraintlayout.widget.ConstraintLayout>
+
+
+
+            </com.google.android.material.card.MaterialCardView>
+
 
 
             <com.google.android.material.button.MaterialButton
@@ -246,13 +224,16 @@
                 app:layout_constraintHorizontal_bias="1.0"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintVertical_bias="1.0"
-                app:layout_constraintTop_toBottomOf="@+id/passwordContainer"
+                app:layout_constraintTop_toBottomOf="@+id/addDescriptionCard"
                 />
 
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
     </androidx.core.widget.NestedScrollView>
+
+
+
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
