--- a/app/src/main/res/layout/fragment_done_dialog.xml
+++ b/app/src/main/res/layout/fragment_done_dialog.xml
@@ -75,10 +75,11 @@
                 />
 
             <TextView
+                android:id="@+id/whichAddedText"
                 android:textAlignment="center"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/done_add_accountant"
+                android:text=""
                 android:textSize="14sp"
                 android:textColor="@color/text_green"
                 android:layout_marginBottom="39dp"
